--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -10,6 +10,9 @@ structural representation of models~-- is not at all resolved by them.
 The real difficulty is that dynamic models cannot be satisfactorily handled through static
 snapshots. \todo{compare to autograd, venture, church}
 
+Not completly satisfactorily, because recursion and branch tracking aren't that useful for different
+reasons.
+
 (\juliapackage{Cassette.jl} is a package very similar to \juliapackage{IRTools.jl})
 \begin{quote}
   Using Cassette on code you wrote is a bit like shooting youself with a experimental mind control
