--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1762,4 +1762,13 @@
   issue = {OOPSLA}
 }
 
+@incollection{zeller2019concolic,
+  title = {Concolic Fuzzing},
+  booktitle = {The Fuzzing Book},
+  author = {Zeller, Andreas and Gopinath, Rahul and Böhme, Marcel and Fraser, Gordon and Holler, Christian},
+  date = {2019},
+  publisher = {{Saarland University}},
+  url = {https://www.fuzzingbook.org/html/ConcolicFuzzer.html}
+}
+
 
