--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -258,7 +258,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-% \includeonly{automatic_graph_tracking}
+% \includeonly{tracking_models}
 
 \begin{document}
 \chapterstyle{hangnum}
