Add example models and dependency graphs

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -258,7 +258,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-% \includeonly{tracking_models}
+\includeonly{tracking_models}
 
 \begin{document}
 \chapterstyle{hangnum}
